--- a/server/.env.example
+++ b/server/.env.example
@@ -1,29 +1,7 @@
-#Server environment
-NODE_ENV=development
-#Port number
-PORT=5000
+PORT=5001
 
 #Db configuration
-DB_HOST=db-host
-DB_USER=db-user
-DB_PASS=db-pass
-DB_NAME=db-name
-
-
-# JWT secret key
-JWT_SECRET=your-jwt-secret-key
-# Number of minutes after which an access token expires
-JWT_ACCESS_EXPIRATION_MINUTES=5
-# Number of days after which a refresh token expires
-JWT_REFRESH_EXPIRATION_DAYS=30
-
-#Log config
-LOG_FOLDER=logs/
-LOG_FILE=%DATE%-app-log.log
-LOG_LEVEL=error
-
-#Redis
-REDIS_HOST=redis-host
-REDIS_PORT=6379
-REDIS_USE_PASSWORD=no
-REDIS_PASSWORD=your-password
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=rootpassword
+DB_NAME=wallet
