--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "nodejs-express-sequelize-mysql",
+  "name": "wallet-api",
   "version": "1.0.0",
-  "description": "Node.js Rest Apis with Express, Sequelize & MySQL",
+  "description": "Node.js Rest Apis for Wallet with Express, Sequelize & MySQL",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "keywords": [
-    "nodejs",
-    "express",
-    "rest",
-    "api",
-    "sequelize",
-    "mysql"
-  ],
-  "author": "bezkoder",
+  "author": "Rahi",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-joi-swagger": "^0.0.2-alpha.0",
     "joi": "^17.10.1",
