--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
+    "react-loading-overlay": "^1.0.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "6.3.0",
